# UCB-CS189-Fall-2025

./: .gitignore  README.org
disc/: pyproject.toml
disc/disc01/: Discussion Notebook 01.ipynb  Discussion Notebook Solutions 01.ipynb
disc/disc02/: Discussion Notebook 02.ipynb  Discussion Notebook Solutions 02.ipynb
hw/hw0_demo/: hw.ipynb  requirements.txt
hw/hw1/: fashion_pt_1.ipynb  fashion_pt_2.ipynb  hw1_student.tex  requirements.txt  test_image.npy
hw/hw1/data/: FashionMNIST_prices.csv
hw/hw1/legacy/: fashion_pt_1.ipynb  (+1 more)
hw/hw2/: arena_style_control.ipynb  arena_warmup.ipynb  plotting_utils.py  requirements.txt  written.tex
hw/hw3/: hw3.ipynb  hw3_written.tex  requirements.txt
hw/hw4/: chimpanzee_train.txt  dna_test.txt  dog_train.txt  hw4_paper_question_student.tex  hw4_part1.ipynb  hw4_part1_fixed.ipynb  hw4_part2.ipynb  imagenet_class_id_to_name.json  requirements.txt  urbansound8k_test.csv
hw/hw5/: finetuning_tutorial.ipynb  hw5_sample_eval.csv  kaggle_test.csv  requirements.txt
lec/: pyproject.toml
lec/lec02/: lec02.ipynb  plotly_intro.ipynb
lec/lec02/data/: Augmented_Landmarks_DataFrame.csv  uc_berkeley_events.csv
lec/lec03/: lec03.ipynb
lec/lec04/: lec04.ipynb
lec/lec05/: lec05.ipynb  speed_length_data.csv
lec/lec06/: lec06.ipynb
lec/lec08/: lec08.ipynb
lec/lec11/: lec11.ipynb
lec/lec12/: lec12.ipynb
lec/lec13/: lec13.ipynb
lec/lec14/: berkeley.css  lec14.ipynb
lec/lec15/: lec15.ipynb
lec/lec16/: lec16.ipynb
lec/lec18/: lec18.ipynb
lec/lec19/: lec19.ipynb
lec/lec21/: lec21.ipynb
lec/lec24/: lec24.ipynb
(+26 files in other folders)
