[project]
name = "lec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]
